--- a/supplycomponent/src/main/res/values/arrays.xml
+++ b/supplycomponent/src/main/res/values/arrays.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string-array name="weeks">
         <item>周日</item>
         <item>周一</item>
